# UCM_MODULE

./: AUTHORS  INSTALL.md  README.md
UCM/arxmls/: CMakeLists.txt  README.md  oe-workdir  ucm_deployment_manifest.arxml  ucm_instance_manifest.arxml  ucm_mapping_manifest.arxml
UCM/pkgmgr/: CMakeLists.txt
USM_SAMPLE_V1.1/: AUTHORS  CMakeLists.txt  INSTALL.md  README.md
USM_SAMPLE_V1.1/pkgmgr_sample/src/: CMakeLists.txt  Makefile  cmake_install.cmake  data_transfer.cpp  data_transfer.h  find_service.cpp  find_service.h  main.cpp  package_management_app.cpp  package_management_app.h
USM_SAMPLE_V1.1/swcl_sample/: CMakeLists.txt
USM_SAMPLE_V1.1/swcl_sample/src/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  swcl_sample
apd/: AUTHORS
apd/apd-cmake-modules/: AUTHORS  CMakeLists.txt  README.md  oe-logs  oe-workdir
apd/apd-cmake-modules/src/: add_adaptive_library.cmake  apd.cmake  docker.cmake  get_git_info.cmake
apd/arxmls/: AUTHORS  CMakeLists.txt  INSTALL.md  README.md  oe-logs  oe-workdir  package_manager.arxml  stdtypes.arxml
apd/crc/: AUTHORS  CMakeLists.txt  README.md  oe-logs  oe-workdir
apd/crc/files/pkgconfig/: libapd_crc.pc.in
apd/crc/src/: CMakeLists.txt  buffer.cpp  crc.cpp
apd/crc/src/test/: CMakeLists.txt
apd/crc/src/test/unit_tests/: CMakeLists.txt
apd/crc/src/test/unit_tests/src/buffer/: buffer_test.cpp
apd/crc/src/test/unit_tests/src/crc/: crc_calculate_crc32_test.cpp  crc_calculate_profile04_test.cpp  crc_calculate_profile05_test.cpp  crc_calculate_profile07_test.cpp  crc_calculate_profile11_test.cpp  crc_calculate_profile22_test.cpp
apd/platform/: AUTHORS  CMakeLists.txt  README.md  oe-logs  oe-workdir
apd/platform/doc/: named_pipe.md  server_client.md  utility.md
apd/platform/files/: CMakeLists.txt
apd/platform/files/pkgconfig/: CMakeLists.txt  apd_platform.pc.in
apd/platform/include/public/apd/platform/: application_already_started_exception.h  errno_exception.h  key_not_found_exception.h  mockable.h  named_input_pipe.h  named_output_pipe.h  named_pipe.h  named_pipe_client.h  named_pipe_server.h  open_pipe_exception.h  utility.h
apd/platform/src/: CMakeLists.txt  named_input_pipe.cpp  named_output_pipe.cpp  named_pipe.cpp  named_pipe_client.cpp  named_pipe_server.cpp  utility.cpp
apd/platform/src/exception/: application_already_started_exception.cpp
apd/rng/: AUTHORS  CMakeLists.txt  README.md  oe-logs  oe-workdir
apd/rng/src/: CMakeLists.txt  random_number_generator.cpp
arxmls/: oe-logs  ucm.arxml  ucm_deployment_manifest.arxml  ucm_timing_manifest.arxml
pkgmgr/: README.md  oe-logs  oe-workdir
pkgmgr/src/: CMakeLists.txt  CTestTestfile.cmake  filesystem.cpp  helper.h  main.cpp  package_management_application.cpp  serial_id_generator.h  synchronized_storage.h  untitled.sublime-project  untitled.sublime-workspace
pkgmgr/src/extraction/: lib_poco_zip_extractor.cpp  software_package_extractor.h
pkgmgr/src/interruptible_thread/: interrupt_token.cpp  interruptible_thread.h
pkgmgr/src/package_manager/: package_manager.cpp  package_manager.h
pkgmgr/src/package_manager_impl/: package_manager_impl.cpp  package_manager_impl.h
pkgmgr/src/package_manager_state/: package_manager_activated_state.h  package_manager_activating_state.cpp  package_manager_activating_state.h  package_manager_idle_state.cpp  package_manager_processing_state.cpp  package_manager_processing_state.h  package_manager_ready_state.cpp  package_manager_ready_state.h  package_manager_rolledback_state.cpp  package_manager_rolledback_state.h  package_manager_rollingback_state.h  package_manager_state.cpp  package_manager_state.h  package_manager_verifying_state.h
pkgmgr/src/parsing/: application.cpp  application.h  application_list_builder.cpp  application_list_builder.h  manifest_parser.h  parsing_types.h  software_cluster_list_builder.cpp  software_cluster_manifest_parser.h  software_package.cpp  software_package_manifest.cpp  software_package_manifest_parser.cpp  software_package_manifest_parser.h  software_package_parser.h  software_package_parser_impl.cpp  software_package_parser_impl.h  ucm_info.cpp  ucm_info.h  ucm_parsing_info.cpp  ucm_parsing_info.h  ucm_strings.h  version.cpp  version_report.h
pkgmgr/src/receive/: ota_package_impl.h  receive_package_interface.h  test_package_impl.h
pkgmgr/src/storage/: action_generator.cpp  action_generator.h  execution_manager_stub.h  filesystem_swcl_manager.cpp  filesystem_swcl_manager.h  install_action.cpp  processes_list_manager.cpp  processes_list_manager.h  remove_action.cpp  swcl_manager.h  update_action.cpp  update_action.h
pkgmgr/src/test/: CMakeLists.txt  Makefile  cmake_install.cmake
pkgmgr/src/test/data/: ucm-package-manager.spec
pkgmgr/src/test/data/opt/DiagnosticExample/etc/: MANIFEST.json
pkgmgr/src/test/data/opt/DiagnosticManager/etc/: MANIFEST.json  dm_config.json
pkgmgr/src/test/data/swpackages/install/: SWCL_MANIFEST.json
pkgmgr/src/test/data/swpackages/install/appA/exec2/etc/: MANIFEST.json
pkgmgr/src/test/data/swpackages/remove/: SWCL_MANIFEST.json
pkgmgr/src/test/unit_test/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  cmake_install.cmake  id_generator_test.cpp  manifest_samples.cpp  test_helper.h
pkgmgr/src/test/unit_test/extraction/: software_package_extractor_test.cpp
pkgmgr/src/test/unit_test/interruptible_thread/: interrupt_token_test.cpp  interruptible_thread_test.cpp
pkgmgr/src/test/unit_test/package_manager/: package_manager_test.cpp
pkgmgr/src/test/unit_test/package_manager_impl/: package_manager_impl_test.cpp  transfer_instance_test.cpp
pkgmgr/src/test/unit_test/parsing/: application_list_builder_test.cpp  application_test.cpp  manifest_parser_test.cpp  software_cluster_list_builder_test.cpp  version_report_test.cpp
pkgmgr/src/test/unit_test/storage/: filesystem_swcl_manager_test.cpp  processes_list_manager_test.cpp
pkgmgr/src/test/unit_test/transfer/: software_package_data_test.cpp
pkgmgr/src/test/unit_test/unit_test/: cmake_install.cmake
pkgmgr/src/transfer/: software_package_data.cpp  streamable.h
(+110 files in other folders)
